--- a/templates/template.html
+++ b/templates/template.html
@@ -14,8 +14,9 @@
         {% endif %}
 
         {% foreach users as user %}
-            <h1>{{ user.name }}</h1>
-            <h2>{{ user.id }}</h2>
+            <h1>{{ user.id }}: {{ user.name }}</h1>
+            <h2>{{ user.email }}</h2>
+            
        {% endforeach %}
     </body>
 </html>
